# vscc

./: CMakeLists.txt  README.md  README_CN.md  build.bat  build.sh  index.js  package.json  postinstall.js
cmake/: exe.cmake  lib.cmake  test.cmake
include/vscc/: vscc.h
lib/: copy.js  find.js
script/: postinstall.js
template/: build.sh
template/cmake/: exe.cmake  npm.cmake  test.cmake  vcruntime.cmake
template/include/vscc/: vscc.h
template/src/lib/: vscc.cpp
template/test/: test.c  test.cpp
